Podcast new episode

--- a/podcast.html
+++ b/podcast.html
@@ -67,49 +67,46 @@
 
     <section class="horizontal--center  padding--top-four-spaces  max-width--700  cf">
       <div class="cf  padding--top-two-spaces">
-        <img src="./images/podcast/artists/4-julie-atherton.jpg" width="300px" alt="julie atherton stagedoor podcast" class="float--left  margin--right-one-space" />
-        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/julie-atherton" class="no-link-colour" title="Listen on Soundcloud">Ep. 4 - Julie Atherton</a></b></h2>
-        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/428063571&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <h2 class="no-margin"><b><a href="https://itunes.apple.com/gb/podcast/ad-lib/id1355675761?mt=2" class="no-link-colour" title="Listen on Soundcloud">Ep. 5 - Fra Fee</a></b></h2>
+        <p><iframe frameborder='0' height='200px' scrolling='no' seamless src='https://embed.simplecast.com/11acfb28?color=3d3d3d' width='100%'></iframe></p>
+        <p><span class="text--light-grey">Release date: 18 April 2018.</span></p>
+        <p>In the episode Kirk is joined by Fra Fee. They discuss his unlikely first acting jobs, his appearance in the movie version of “Les Miserables” and his award winning appearance in “The Ferryman” </p>
+      </div>
+
+      <div class="cf  padding--top-two-spaces">
+        <h2 class="no-margin"><b><a href="https://itunes.apple.com/gb/podcast/ad-lib/id1355675761?mt=2" class="no-link-colour" title="Listen on Soundcloud">Ep. 4 - Julie Atherton</a></b></h2>
+        <p><iframe frameborder='0' height='200px' scrolling='no' seamless src='https://embed.simplecast.com/34b4ec75?color=3d3d3d' width='100%'></iframe></p>
         <p><span class="text--light-grey">Release date: 11 April 2018.</span></p>
         <p>In the episode Kirk is joined by Julie Atherton. They discuss her first steps towards a career in theatre, the original London production of “Avenue Q” and the importance of new writing and London’s fringe.</p>
       </div>
 
       <div class="cf  padding--top-two-spaces">
-        <img src="./images/podcast/artists/3-lara-denning.jpg" width="300px" alt="lara denning stagedoor podcast" class="float--left  margin--right-one-space" />
-        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/lara-denning" class="no-link-colour" title="Listen on Soundcloud">Ep. 3 - Lara Denning</a></b></h2>
-        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/424530936&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <h2 class="no-margin"><b><a href="https://itunes.apple.com/gb/podcast/ad-lib/id1355675761?mt=2" class="no-link-colour" title="Listen on Soundcloud">Ep. 3 - Lara Denning</a></b></h2>
+        <p><iframe frameborder='0' height='200px' scrolling='no' seamless src='https://embed.simplecast.com/4b0bdca0?color=3d3d3d' width='100%'></iframe></p>
         <p><span class="text--light-grey">Release date: 04 April 2018.</span></p>
         <p>In this episode Kirk is joined by close friend and fellow northerner, Lara Denning. They discuss growing up in Blackpool, audition technique and what it takes to over come insecurities as an actor.</p>
       </div>
 
       <div class="cf  padding--top-two-spaces">
-        <img src="./images/podcast/artists/2-mark-anderson.jpg" width="300px" alt="mark anderson stagedoor podcast" class="float--left  margin--right-one-space" />
-        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/mark-anderson" class="no-link-colour" title="Listen on Soundcloud">Ep. 2 - Mark Anderson</a></b></h2>
-        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/421221348&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <h2 class="no-margin"><b><a href="https://itunes.apple.com/gb/podcast/ad-lib/id1355675761?mt=2" class="no-link-colour" title="Listen on Soundcloud">Ep. 2 - Mark Anderson</a></b></h2>
+        <p><iframe frameborder='0' height='200px' scrolling='no' seamless src='https://embed.simplecast.com/09aaa0d0?color=3d3d3d' width='100%'></iframe></p>
         <p><span class="text--light-grey">Release date: 28 March 2018.</span></p>
         <p>In this episode Kirk is joined by actor Mark Anderson as he appears in “The Grinning Man” at Trafalgar Studios. They discuss the changing face of London theatre, new writing and influence of Stiles and Drewe on his career.</p>
       </div>
 
       <div class="cf  padding--top-two-spaces">
-        <img src="./images/podcast/artists/1-alice-fearn.jpg" width="300px" alt="alice fearn stagedoor podcast" class="float--left  margin--right-one-space" />
-        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/alice-fearn" class="no-link-colour" title="Listen on Soundcloud">Ep. 1 - Alice Fearn</a></b></h2>
-        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/416925429&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <h2 class="no-margin"><b><a href="https://itunes.apple.com/gb/podcast/ad-lib/id1355675761?mt=2" class="no-link-colour" title="Listen on Soundcloud">Ep. 1 - Alice Fearn</a></b></h2>
+        <p><iframe frameborder='0' height='200px' scrolling='no' seamless src='https://embed.simplecast.com/5ef1656d?color=3d3d3d' width='100%'></iframe></p>
         <p><span class="text--light-grey">Release date: 21 March 2018.</span></p>
         <p>In this episode Kirk is joined by Alice Fearn; London’s Current Elphaba, from the Global Sensation “Wicked”. They discuss Alice’s path into theatre and her numerous musical credits including “Les Miserables”, “Into the Woods” “Oliver!” and “Shrek”.</p>
       </div>
 
       <div class="cf  padding--top-two-spaces">
-        <img src="./images/podcast/ad-lib-stagedoor.jpg" width="300px" alt="ad lib stagedoor podcast" class="float--left  margin--right-one-space" />
-        <h2><b><a href="https://soundcloud.com/stagedoorldn/ad-lib-teaser" class="no-link-colour" title="Listen on Soundcloud">Ad Lib Teaser</a></b></h2>
-        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/408941274&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <h2><b><a href="https://itunes.apple.com/gb/podcast/ad-lib/id1355675761?mt=2" class="no-link-colour" title="Listen on Soundcloud">Ad Lib Teaser</a></b></h2>
+        <p><iframe frameborder='0' height='200px' scrolling='no' seamless src='https://embed.simplecast.com/852a3819?color=3d3d3d' width='100%'></iframe></p>
         <p><span class="text--light-grey">Release date: 14 March 2018.</span></p>
         <p>Each week director Kirk Jameson welcomes one of his favourite theatre personalities to chat about the joys and challenges of a career in the arts.</p>
       </div>
-
-<!--       <div class="cf  padding--top-two-spaces">
-        <h2><b>Episode 3</b></h2>
-        <p><span class="text--light-grey">Release date: 4 April 2018.</span></p>
-      </div> -->
     </section>
 
 
