--- a/podcast.html
+++ b/podcast.html
@@ -67,6 +67,13 @@
 
     <section class="horizontal--center  padding--top-four-spaces  max-width--700  cf">
       <div class="cf  padding--top-two-spaces">
+        <h2 class="no-margin"><b><a href="https://itunes.apple.com/gb/podcast/ad-lib/id1355675761?mt=2" class="no-link-colour" title="Listen on Soundcloud">Ep. 7 - Tyrone Huntley</a></b></h2>
+        <p><iframe frameborder='0' height='200px' scrolling='no' seamless src='https://embed.simplecast.com/9df28013?color=3d3d3d' width='100%'></iframe></p>
+        <p><span class="text--light-grey">Release date: 2 May 2018.</span></p>
+        <p>This week Kirk is joined by the Olivier Award Nominated Tyrone Huntley. They discuss how a career in musical theatre was wasn’t always the obvious choice for Tyrone and the challenges of taking on new projects in smaller spaces.</p>
+      </div>
+
+      <div class="cf  padding--top-two-spaces">
         <h2 class="no-margin"><b><a href="https://itunes.apple.com/gb/podcast/ad-lib/id1355675761?mt=2" class="no-link-colour" title="Listen on Soundcloud">Ep. 6 - Harriet Thorpe</a></b></h2>
         <p><iframe frameborder='0' height='200px' scrolling='no' seamless src='https://embed.simplecast.com/e5085570?color=3d3d3d' width='100%'></iframe></p>
         <p><span class="text--light-grey">Release date: 25 April 2018.</span></p>
