WAF temporary Typeform link change

--- a/partners.html
+++ b/partners.html
@@ -75,7 +75,8 @@
         <h1 class="padding--top-bottom-one-space">We help people discover great theatre performances.</h1>
         <h2>Grow your following and get discovered through verified pages. Claim your professional Stagedoor page, and personalise the content seen by your followers.</h2>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="https://stagedoor1.typeform.com/to/IUkQbx" class="button  button--claim  no-link-colour" title="Claim your Stagedoor page">Claim your Stagedoor page</a>
+          <a href="https://stagedoor1.typeform.com/to/FxK4Sq" class="button  button--claim  no-link-colour" title="Claim your Stagedoor page">Claim your Stagedoor page</a>
+          <!--a href="https://stagedoor1.typeform.com/to/IUkQbx" class="button  button--claim  no-link-colour" title="Claim your Stagedoor page">Claim your Stagedoor page</a-->
         </p>
       </div>
 
@@ -153,7 +154,7 @@
     <section class="margin--top-bottom-four-spaces">
       <h2 class="text--center">Expand your reach and interact with your audience directly.</h2>
       <p class="text--bigger  margin--top-one-space">
-        <a href="https://stagedoor1.typeform.com/to/IUkQbx" class="horizontal--center  button  button--claim  no-link-colour" title="Claim your Stagedoor page">Claim your Stagedoor page</a>
+        <a href="https://stagedoor1.typeform.com/to/FxK4Sq" class="horizontal--center  button  button--claim  no-link-colour" title="Claim your Stagedoor page">Claim your Stagedoor page</a>
       </p>
     </section>
 
