logo change to SVG (instead of apple-touch-icon)

--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
   <!-- End Google Tag Manager -->
 
   <div class="container  max-width--980  horizontal--center  text--center  padding--top-six-spaces  position--relative">
-    <a href="https://stagedoorapp.com" title="Back to homepage"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
+    <a href="https://stagedoorapp.com" title="Back to homepage"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
     <h1 class="padding--top-four-spaces  h1--giga">404</h1>
     <h2><b>Page not found, sorry.</b></h2>
     <h4 class="padding--top-one-space"><a href="https://stagedoorapp.com" title="Back to homepage">Back to homepage</a> or <a href="mailto:hi@stagedoorapp.com?subject=Page not found on public site">email us</a>.</h4>
