--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </nav>
 
     <section class="padding--bottom-one-space  show-on-mobile  text--center">
-      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
       <h2>Stagedoor</h2>
     </section>
 
@@ -153,7 +153,7 @@
 
       <div class="float--right  width--60  margin--top-four-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="92" class="block--inline  vertical-align--middle" /></a>
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" width="92" class="block--inline  vertical-align--middle" /></a>
           <h2 class="block--inline  padding--left-one-space  vertical-align--middle  h2--giga">Stagedoor</h2>
         </header>
 
