--- a/koubanproductions.html
+++ b/koubanproductions.html
@@ -45,7 +45,7 @@
 
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
     <section class="padding--bottom-one-space  show-on-mobile">
-      <a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
+      <a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
       <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
       <a href="stagedoor://theatre_company_id=266" class="button--open-in-app">Open in App</a>
     </section>
@@ -60,7 +60,7 @@
 
       <div class="float--left  width--60  margin--top-four-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
+          <a href="https://stagedoor.hoko.link/koubanproductions" class="appstore-link" title="Download iOS app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
