--- a/open.html
+++ b/open.html
@@ -44,7 +44,7 @@
 
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  text--center">
     <p class="padding--top-two-spaces">
-      <a href="https://itunes.apple.com/us/app/stagedoor/id963068912?mt=8&at=&ct=3" id="inappicon-link" title="Open in Stagedoor app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
+      <a href="https://itunes.apple.com/us/app/stagedoor/id963068912?mt=8&at=&ct=3" id="inappicon-link" title="Open in Stagedoor app"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
     </p>
   </div>
 
