--- a/partners.html
+++ b/partners.html
@@ -54,7 +54,7 @@
 
     <section class="show-on-mobile">
       <header class="margin--bottom-four-spaces">
-        <a href="http://stagedoorapp.com"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
+        <a href="http://stagedoorapp.com"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
         <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
         Stagedoor<br/>
           <small>for theatre venues and companies.</small>
@@ -65,7 +65,7 @@
     <section class="cf  margin--top-two-spaces">
       <div class="float--left  width--60  margin--top-four-spaces  margin--bottom-four-spaces  horizontal--center">
         <header class="padding--bottom-four-spaces  hide-on-mobile">
-          <a href="http://stagedoorapp.com" class="block--inline"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--neg-70" /></a>
+          <a href="http://stagedoorapp.com" class="block--inline"><img src="images/logo.svg" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--neg-70" /></a>
           <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
             Stagedoor<br/>
             <small>for theatre venues and companies.</small>
