--- a/croydonites.html
+++ b/croydonites.html
@@ -46,7 +46,7 @@
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
     <section class="show-on-mobile">
       <header class="margin--bottom-four-spaces">
-        <a href="http://stagedoorapp.com"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
+        <a href="http://stagedoorapp.com"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
         <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
         Stagedoor
         </h2>
@@ -63,7 +63,7 @@
 
       <div class="float--left  width--60  margin--top-four-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="block--inline"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--middle" /></a>
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="block--inline"><img src="images/logo.svg" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--middle" /></a>
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
