--- a/vaultfestival.html
+++ b/vaultfestival.html
@@ -54,7 +54,7 @@
 
     <section class="show-on-mobile">
       <header class="margin--bottom-four-spaces">
-        <a href="http://stagedoorapp.com"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
+        <a href="http://stagedoorapp.com"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
         <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
         Stagedoor<br/>
         </h2>
@@ -71,7 +71,7 @@
 
       <div class="float--left  width--60  margin--top-four-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <a href="http://bit.ly/vltstgdr" class="block--inline"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--middle" /></a>
+          <a href="http://bit.ly/vltstgdr" class="block--inline"><img src="images/logo.svg" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--middle" /></a>
           <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
             Stagedoor<br/>
           </h2>
