typo in Privacy Policy

--- a/privacy.html
+++ b/privacy.html
@@ -224,7 +224,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p>We reserve the right to modify this Privacy Policy document. Any changes we may make to our Privacy Policy in the future will be posted on this page and, where appropriate, notified to you. We will notify you by email or push notification or through the app next time you use it. </p>
       <p>Stagedoor may, from time to time, contain links to and from the websites of our partner networks and affiliates. If you follow a link to any of these websites, please note that these websites and any services that may be accessible through them have their own privacy policies and that we do not accept any responsibility or liability for these policies or for any personal data that may be collected through these websites or services, such as contact and location data. Please check these policies before you submit any personal data to these websites or use these services.</p>
 
-      <h2>Data Protection Authority.</h2>
+      <h2>Data Protection Authority</h2>
       <p>If you are a resident of the European Economic Area (EEA) and believe we maintain your personal data subject to the General Data Protection Regulation (GDPR), you may direct questions or complaints to our lead supervisory authority, the UK's Information Commissioner’s Office, as noted below:</p>
       <p>
         <a href="www.ico.org.uk" rel="nofollow" target="_blank">www.ico.org.uk</a><br/>
