Evelina Privacy Policy changes

--- a/privacy.html
+++ b/privacy.html
@@ -44,23 +44,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h1>Privacy Policy</h1>
       <p class="opacity--50">Last updated: 10 May 2018 (Effective 25 May 2018)</p>
       <p class="text--bigger">Because of a new data privacy law that is being introduced in the EU on 25 May, we’ll be sharing some more information with you about how we collect and use your personal information.</p>
-      <p class="text--bigger">Over the last months we have taken great care in preparing for this change in European law to ensure that all of our processes,tech-infrastructure, partners and policies comply with GDPR. Nothing will change how you use Stagedoor. We will just provide you with more power and control over your personal data. </p>
+      <p class="text--bigger">Over the last months, we have taken great care in preparing for this change in European law to ensure that all of our processes, tech-infrastructure, partners and policies comply with GDPR. Nothing will change on how you use Stagedoor. We will just provide you with more power and control over your personal data.</p>
       <h2><b>Here’s a summary of what GDPR actually means for you:</b></h2>
-      <p>To help break this down and make it easier for you to find out what we do, we’ve updated our Privacy Policy to explain details about: </p>
+      <p>To help break this down and make it easier for you to understand what we do, we’ve updated our Privacy Policy to explain details about: </p>
       <ul>
         <li>Your rights relating to the information we hold about you. </li>
           <ul>
-            <li>We want to give more power and control back to you over your data. You now have the ability to request a download, deletion or edit of you personal information through your settings page in the app. </li>
+            <li>We want to give more power and control back to you over your data. You now have the ability to request a download, edit or deletion of your personal information through the settings page in the app. </li>
           </ul>
-        <li>How we keep your personal information safe </li>
+        <li>How we keep your personal information safe .</li>
           <ul>
-            <li>Our internal processes, technology infrastructure, 3rd party services / partners have all been revisited and are compliant with EU GDPR regulation. We have dedicated, secure servers for your personal data. These are shrouded in multiple layers of security to keep all your details safe. </li>
+            <li>Our internal processes, technology infrastructure, and 3rd party services / partners have all been revisited and are compliant with EU GDPR regulation. We have dedicated and secure servers for your personal data. These are shrouded in multiple layers of security to keep all your details safe. </li>
             <li>We now have a Data Protection Officer contactable at <a href="mailto:dpo@stagedoorapp.com">dpo@stagedoorapp.com</a> whose responsibility is this. </li>
           </ul>
-        <li>The types of personal information we collect and use to offer the services we promise to you and the legal basis we rely on to use your information </li>
+        <li>The types of personal information we collect and use to offer the services we promise to you and the legal basis we rely on, to use this information .</li>
+        <li>Full transparency on the information that’s submitted by you or collected by us and the reasons why this information is needed to:
           <ul>
-            <li>Full transparency on the information that’s submitted by you or collected by us and the reasons why this information is needed to: a) Provide you with the best possible recommendations of theatre performances in the most efficient way. b) Be able to deliver your tickets when you purchase them through Stagedoor c) to d) understanding which parts of our product you enjoy the most and continuously Improving our service to you. We will never sell your data and we will always allow you to download or delete your data. </li>
+            <li>Provide you with the best possible recommendations for theatre performances in the most efficient way.</li>
+            <li>Be able to deliver your tickets when you purchase them through Stagedoor</li>
+            <li>Understand which parts of our product you enjoy the most and to continuously improve our service to you.</li>
           </ul>
+        </li>
+        <li>We will never sell your data and we will always allow you to have control over it. </li>
       </ul>
       <h2>Who we are</h2>
       <p>Stagedoor (we) are committed to protecting and respecting your privacy.</p>
