--- a/test.html
+++ b/test.html
@@ -22,7 +22,9 @@
 
   var button = document.getElementsByClassName("testButton");
   button.onclick = function(){
+    alert('clicked');
     if (notiOS == false) {
+      alert('false');
       window.location = "https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8";
       return false;
     }
