--- a/test.html
+++ b/test.html
@@ -5,34 +5,9 @@
    <title>Test</title>
 </head>
 <body>
-   <a href="https://alexcican.com/stagedoor/test?v=4" class="testButton">Test me</a>
+   <a href="https://alexcican.com/stagedoor/test?v=4&amp;fromBtnOpenApp=true">Test me</a>
 
-
-
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-
-  <script>
-   // detect if iPhone/iPad/iPod
-   var notiOS = true;
-   if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i)) || (navigator.userAgent.match(/iPad/i))) {
-     notiOS = false;
-   }
-
-
-  var button = document.getElementsByClassName("testButton");
-  button.onclick = function(){
-    alert('clicked');
-    if (notiOS == false) {
-      alert('false');
-      window.location = "https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8";
-      return false;
-    }
-  }
-  </script>
-
-
-   <!--script>
+   <script>
     // split URL
     function getParameterByName(name, url) {
       if (!url) url = window.location.href;
@@ -51,11 +26,13 @@
     }
 
     // if on iOS device check to see if user has the app or not
-    var fromWeb = getParameterByName('fromWeb');
-    if (fromWeb == "true") {
-      // means that user doesn't have the app. Show App Store alert
-      window.location = "https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8";
+    if (notiOS === false) {
+       var fromBtnOpenApp = getParameterByName('fromBtnOpenApp');
+       if (fromBtnOpenApp === "true") {
+         // if parameter exists means page was reloaded = user doesn't have the app. Show App Store alert
+         window.location = "https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8";
+       }
     }
-   </script-->
+   </script>
 </body>
 </html>
