--- a/test.html
+++ b/test.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width" />
+   <meta charset="UTF-8" />
    <title>Test</title>
 </head>
 <body>
-   <a href="https://alexcican.com/stagedoor/test?v=4&amp;fromBtnOpenApp=true">Test me</a>
+   <div>
+      <a href="https://alexcican.com/stagedoor/test?v=4&amp;fromBtnOpenApp=true">Test me (has solution)</a><br/>
+      <a href="https://alexcican.com/stagedoor/test?v=4">Test me</a>
+   </div>
 
    <script>
     // split URL
