--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
 <body>
    <div>
       <a href="https://alexcican.com/stagedoor/test?v=4&amp;fromBtnOpenApp=true">Test me (has solution)</a><br/>
+      <a href="https://alexcican.com/stagedoor/test?fromBtnOpenApp=true&amp;v=4">Test me (has altered solution)</a><br/>
       <a href="https://alexcican.com/stagedoor/test?v=4">Test me</a>
    </div>
 
