--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
   <div class="container  max-width--700  horizontal--center  text--center  padding--top-six-spaces  position--relative">
     <a href="https://stagedoorapp.com" title="Back to homepage"><img src="images/logo.svg" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
     <h1 class="padding--top-four-spaces"><b>The page you&rsquo;re looking for can&rsquo;t be found.</b></h1>
-    <h4 class="padding--top-one-space"><a href="https://stagedoorapp.com" title="Back to homepage">Back to homepage</a> or <a href="mailto:hi@stagedoorapp.com?subject=Page not found on public site">email us</a>.</h4>
+    <h4 class="padding--top-one-space"><a href="https://stagedoorapp.com" title="Back to homepage">Back to homepage</a> or <a href="mailto:support@stagedoorapp.com?subject=Page not found on public site">email us</a>.</h4>
   </div>
 </body>
 </html>
