Camden Fringe 2018 page changes

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
         <div>
           <h2>Theatre festivals</h2>
-          <p class="text--bigger">Stagedoor is the official app of the biggest theatre festivals in London, <a href="http://stagedoorapp.com/camdenfringe">The Camden Fringe 2017</a> and 2016, <a href="http://stagedoorapp.com/vaultfestival">VAULT Festival 2017</a>, listing over 1425 shows and 300 theatre companies.</p>
+          <p class="text--bigger">Stagedoor is the official app of the biggest theatre festivals in London, <a href="https://stagedoorapp.com/camdenfringe">The Camden Fringe 2018</a>, 2017, and 2016, <a href="https://stagedoorapp.com/vaultfestival">VAULT Festival 2017</a>, listing over 1425 shows and 300 theatre companies.</p>
         </div>
       </div>
     </section>
